syntax = "proto3";

package gophkeeper;

option go_package = "gophkeeper/proto";

message Password {
  string login = 1;
  string password = 2;
}

message CreateTextRequest {
  string name = 1;
  string text = 2;
  string notes = 3;
}
message CreateTextResponse{}

message CreatePasswordRequest {
  string name = 1;
  Password password = 2;
  string notes = 3;
}
message CreatePasswordResponse{}

service Secrets {
  rpc CreateText(CreateTextRequest) returns (CreateTextResponse);
  rpc CreatePassword(CreatePasswordRequest) returns (CreatePasswordResponse);
}